@@ -1,3 +1,6 @@
+- Apply perfume to all unit types & buildings with the specified name
+  - Fixes perfume only applying to one sub-type when a unit type has multiple AI strategies
+
 * RELEASE 17 PREVIEW 3
 - Civ and leader names can vary by era
 - Option to stop AI from escorting units without the "requires escort" flag
